@@ -23,3 +23,5 @@ NOTE!! Messed up git commit of v1.5.0.  Most of it ended up --amend'ed to v1.4.0
 * fb9e4dd (HEAD, master) Add DEFAULT_FROM_EMAIL to settings. Add Forgot Password link to login form.
 * 55a52c1 (origin/master) fix: Add session messages to registration views/templates
 * ab3c960 feat: Add password management features
+01/19/2016 Version 1.5.2:
+* 169bddd (HEAD, master) fix: Issue with logging out for non-admin users
